[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.friendly_name}}"
authors = [
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"},
]
license = {text = "{{cookiecutter.license}}"}
dependencies = []
requires-python = ">=3.10"
readme = "README.md"

# TODO: migrate this to pdm
[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
src = ['src', 'tests']
line-length = 80
select = [
    'ASYNC',
    'B',
    'B9',
    'BLE',
    'C4',
    'COM',
    'D',
    'DTZ',
    'E',
    'EXE',
    'F',
    'FA',
    'I001',
    'ICN',
    'INP',
    'ISC',
    'N',
    'NPY',
    'PD',
    'PERF',
    'PGH',
    'PIE',
    'PT',
    'PTH',
    'PYI',
    'Q',
    'RET',
    'RSE',
    'RUF',
    'S',
    'SIM',
    'SLOT',
    'T10',
    'TD',
    'TID',
    'UP',
    'W',
    'YTT',
]
ignore = [
    'PGH003', # Specific rule codes not always available
    'RET504', # Sometimes worth doing for readability
    'RET505', # Currently has a bug
    'RET506', # Currently has a bug
    'S603', # Bug: https://github.com/astral-sh/ruff/issues/4045
    'SIM300', # Doesn't work well with Pandas
    'TD002', # Not for prototyping
    'TD003', # Not for prototyping
]
namespace-packages = ["src"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ['F401']
"tests/*" = [
    'D104',
    'D205',
    'D212',
    'D415',
    'S101',
]

[tool.ruff.pydocstyle]
convention = "numpy-notypes"

[tool.ruff.isort]
force-single-line = true
lines-after-imports = 2
